[gd_scene load_steps=9 format=3 uid="uid://bjywsybb4eq7d"]

[ext_resource type="Script" path="res://Script/Menu.gd" id="1_clqjf"]
[ext_resource type="Theme" uid="uid://cduh81d67qsd1" path="res://Themes/Main Theme.tres" id="2_hx1s8"]
[ext_resource type="Texture2D" uid="uid://p7f3crjll3g4" path="res://Assets/Scenes-assets/generic/generic/bg_7/bg_7_0000_layer_0.png" id="3_4nsnf"]
[ext_resource type="Texture2D" uid="uid://cgm5tansj48qf" path="res://Assets/Scenes-assets/generic/generic/bg_7/bg_7_0001_layer_1.png" id="4_5rgey"]
[ext_resource type="Texture2D" uid="uid://b3lrspq60mha6" path="res://Assets/Scenes-assets/generic/generic/bg_7/bg_7_0002_layer_2.png" id="5_8itjb"]
[ext_resource type="Texture2D" uid="uid://ob1b7nmt5yj3" path="res://Assets/Scenes-assets/generic/generic/bg_7/bg_7_0003_layer_3.png" id="6_yengn"]
[ext_resource type="PackedScene" uid="uid://bgm3idcquxa4c" path="res://Scene/Options.tscn" id="7_0xk7b"]

[sub_resource type="SystemFont" id="SystemFont_1lntr"]
font_names = PackedStringArray("Impact")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_clqjf")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = SubResource("SystemFont_1lntr")
theme_override_font_sizes/font_size = 60
text = "Game Title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Separator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Separator3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Play_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("2_hx1s8")
theme_override_font_sizes/font_size = 35
text = "Play"

[node name="Options_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("2_hx1s8")
theme_override_font_sizes/font_size = 35
text = "Options
"

[node name="Exit_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("2_hx1s8")
theme_override_font_sizes/font_size = 35
text = "Exit"

[node name="Bg70000Layer0" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(576, 324.25)
scale = Vector2(0.791209, 0.79473)
texture = ExtResource("3_4nsnf")

[node name="Bg70001Layer1" type="Sprite2D" parent="."]
z_index = -1
texture_filter = 1
position = Vector2(577, 323.5)
scale = Vector2(0.791209, 0.795343)
texture = ExtResource("4_5rgey")

[node name="Bg70002Layer2" type="Sprite2D" parent="."]
z_index = -2
texture_filter = 1
position = Vector2(576, 324)
scale = Vector2(0.789835, 0.794118)
texture = ExtResource("5_8itjb")

[node name="Bg70003Layer3" type="Sprite2D" parent="."]
z_index = -3
texture_filter = 1
position = Vector2(576, 324)
scale = Vector2(0.791209, 0.794118)
texture = ExtResource("6_yengn")

[node name="Options" parent="." instance=ExtResource("7_0xk7b")]
visible = false
layout_mode = 1
